Try to fix the nav block alignment again. Matched footer colout to header and changed text colour

--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,11 @@ header {
     width: 100%;
     text-align: left;
     padding: 20px 0;
-    background-color: #262a2c;;
+    background-color: #262a2c;
 }
 
 nav {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     background-color: #262a2c;
     color: #e2c044;
@@ -27,6 +26,7 @@ nav {
 
 nav ul {
     display: flex;
+    justify-content: space-between;
     margin: 0;
     padding: 0;
     list-style-type: none;
@@ -50,6 +50,11 @@ nav a:hover {
 
 main {
     
+}
+
+footer {
+    background-color: #262a2c;
+    color: #d7d9d3;
 }
 
 /* Elements */
